@@ -7,16 +7,20 @@ import me.marioogg.command.common.help.HelpNode;
 import me.marioogg.command.bukkit.node.ArgumentNode;
 import me.marioogg.command.bukkit.node.CommandNode;
 import me.marioogg.command.bukkit.parameter.ParamProcessor;
+import net.md_5.bungee.api.chat.ComponentBuilder;
 import org.bukkit.ChatColor;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
+import org.slf4j.Logger;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 import java.util.stream.Collectors;
 
 public class BukkitCommand extends Command {
     @Getter private static final HashMap<String, BukkitCommand> commands = new HashMap<>();
+    private static final Logger log = BukkitCommandHandler.getLogger();
 
     @SneakyThrows
     public BukkitCommand(String root) {
@@ -32,11 +36,11 @@ public class BukkitCommand extends Command {
     public boolean execute(CommandSender sender, String label, String[] args) {
         List<CommandNode> sortedNodes = CommandNode.getNodes().stream()
                 .sorted(Comparator.comparingInt(node -> node.getMatchProbability(sender, label, args, false)))
-                .collect(Collectors.toList());
+                .toList();
 
         CommandNode node = sortedNodes.get(sortedNodes.size() - 1);
         if(node.getMatchProbability(sender, label, args, false) < 90) {
-            if(node.getHelpNodes().size() == 0) {
+            if(node.getHelpNodes().isEmpty()) {
                 node.sendUsageMessage(sender);
                 return false;
             }
@@ -61,22 +65,22 @@ public class BukkitCommand extends Command {
         try {
             List<CommandNode> sortedNodes = CommandNode.getNodes().stream()
                     .sorted(Comparator.comparingInt(node -> node.getMatchProbability(sender, label, args, true)))
-                    .collect(Collectors.toList());
+                    .toList();
 
             CommandNode node = sortedNodes.get(sortedNodes.size() - 1);
-            if(!node.isAllowComplete()){
+            if (!node.isAllowComplete()) {
                 return new ArrayList<>();
             }
-            if(node.getMatchProbability(sender, label, args, true) >= 50) {
+            if (node.getMatchProbability(sender, label, args, true) >= 50) {
 
                 int extraLength = node.getNames().get(0).split(" ").length - 1;
 
                 // Count positional (non-flag) args typed so far
                 String currentArg = args[args.length - 1];
                 List<String> positionalSoFar = new ArrayList<>();
-                for(int i = extraLength; i < args.length - 1; i++) {
+                for (int i = extraLength; i < args.length - 1; i++) {
                     String a = args[i];
-                    if(node.getFlagNodes().stream().anyMatch(fn -> fn.matches(a))) continue;
+                    if (node.getFlagNodes().stream().anyMatch(fn -> fn.matches(a))) continue;
                     positionalSoFar.add(a);
                 }
                 int positionalArgIndex = positionalSoFar.size();
@@ -84,22 +88,22 @@ public class BukkitCommand extends Command {
                 List<String> completions = new ArrayList<>();
 
                 // Positional param completions
-                if(positionalArgIndex < node.getParameters().size()) {
+                if (positionalArgIndex < node.getParameters().size()) {
                     ArgumentNode argumentNode = node.getParameters().get(positionalArgIndex);
                     completions.addAll(new ParamProcessor(argumentNode, currentArg, sender).getTabComplete());
                 }
 
                 // Flag completions (only suggest flags not yet present in args)
                 Set<String> usedFlags = new HashSet<>();
-                for(int i = extraLength; i < args.length - 1; i++) {
+                for (int i = extraLength; i < args.length - 1; i++) {
                     String a = args[i];
                     node.getFlagNodes().stream().filter(fn -> fn.matches(a)).findFirst()
                             .ifPresent(fn -> usedFlags.add(fn.getValue()));
                 }
-                for(FlagNode fn : node.getFlagNodes()) {
-                    if(usedFlags.contains(fn.getValue())) continue;
-                    for(String token : fn.getTokens()) {
-                        if(token.toLowerCase().startsWith(currentArg.toLowerCase())) {
+                for (FlagNode fn : node.getFlagNodes()) {
+                    if (usedFlags.contains(fn.getValue())) continue;
+                    for (String token : fn.getTokens()) {
+                        if (token.toLowerCase().startsWith(currentArg.toLowerCase())) {
                             completions.add(token);
                         }
                     }
@@ -119,9 +123,10 @@ public class BukkitCommand extends Command {
                     .flatMap(List::stream)
                     .filter(name -> name.toLowerCase().startsWith(args[args.length - 1].toLowerCase()))
                     .collect(Collectors.toList());
-        } catch(Exception exception) {
-            exception.printStackTrace();
-            return new ArrayList<>();
+        } catch (Exception e) {
+            log.error("An exception occurred while executing tab completion for command '{}' (Sender: {})", label, sender.getName(), e);
+            sender.sendMessage(ChatColor.RED + "An internal error occurred while executing this command.");
         }
+        return new ArrayList<>();
     }
 }
